--- a/templates/base.html
+++ b/templates/base.html
@@ -33,8 +33,9 @@
 
     {% include "navbar.html" %}
 
-
     <div class="container my-5 py-5">
+
+        {% include 'message.html' %}
 
         {% block content %}
         {% endblock content %}
